# clipsbot

./: .env.example  .env.shared  .gitignore  LICENSE  docker-compose.https.yml  docker-compose.yml  template.code-workspace
.github/workflows/: backend-ci.yml  backend.yml  deploy-gcp-vm.yml
backend/: .env.example  Dockerfile  entry.sh  pyproject.toml
backend/scripts/: archive_index_runner.py  archive_monitor.py  archive_supervisor.py  launch_archive_supervisor.py  run_archive_supervisor.sh  status_archive_supervisor.sh  stop_archive_supervisor.sh
backend/src/: main.py
backend/src/api/v1/: __init__.py
backend/src/broker/: __init__.py  publisher.py  topology.py
backend/src/core/: config.py  rbac.py  security.py
backend/src/core/http/: cookies.py
backend/src/database/relational_db/: session.py
backend/src/domain/archive/: schemas.py
backend/src/domain/clips/: schemas.py
backend/src/scheduler/: main.py
backend/src/service/: bootstrap.py
backend/src/service/auth/: __init__.py
backend/src/worker/: main.py
backend/tests/: conftest.py
backend/tests/integration/: test_archive_pipeline.py
backend/tests/unit/: test_token_service.py
bot/: Dockerfile  pyproject.toml
bot/src/: backend_client.py  config.py  main.py
caddy/: Caddyfile
frontend/: .dockerignore  Dockerfile  eslint.config.js  openapi.json  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.json
frontend/src/app/: layout.tsx  providers.tsx
nginx/: Dockerfile  nginx.conf  nginx.https.conf
ops/gcp/: deploy_vm.sh  vm-startup.sh
rabbitmq/conf.d/: 20-heartbeat.conf
(+157 files in other folders)
