[project]
name = "clipsbot-bot"
version = "0.1.0"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
